compiler/tests/fixtures/compile_errors/not_in_scope.fe
contract Foo:

    pub def bar() -> u256:
        if true:
            y: u256 = 1
        else:
            y: u256 = 1
        return y